removing the hyperlink gear symbol from number of fully completed train

--- a/assets/templates/sys_train_manufacturing_phase.html
+++ b/assets/templates/sys_train_manufacturing_phase.html
@@ -9,7 +9,7 @@
 </div>
 <div class="content" style="background: none;/*#1d2a34*/">
 	<!--h2>Header h2</h2-->
-	<h4 class="color-beige">Number of Fully Completed Train: <a class="manufacturing-link link" href="#modal_phase" data-toggle="modal" style="font-weight:bold">04 <i class="loadpage fa fa-link"></i></a></h4>
+	<h4 class="color-beige">Number of Fully Completed Train: <a class="manufacturing-link link" href="#modal_phase" data-toggle="modal" style="font-weight:bold">04</a></h4>
 	<h4 class="color-beige">Project Completion Countdown:</h4>
 	<table class="table table-bordered table-condensed table-hover" style="">
 	<thead>
