--- a/assets/templates/sys_train_manufacturing_testing.html
+++ b/assets/templates/sys_train_manufacturing_testing.html
@@ -20,30 +20,65 @@
 	</thead>
 	<%
 	/* Faking it */
-	data.tabledata = [
-	[17, 16, 1, 0, 7, 4, 2, 1, 21, 18, 1, 0, 7, 4, 2, 0, 7, 4, 2, 0 ],
-	[19, 18, 1, 0, 7, 7, 4, 1, 19, 18, 1, 0, 7, 4, 2, 0, 7, 4, 2, 0 ],
-	[17, 10, 7, 0, 5, 6, 1, 0, 18, 11, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 8, 8, 0, 0, 8, 8, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 18, 11, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 20, 12, 8, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 7, 10, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 7, 10, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],
-	[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ]
+	<!--data.tabledata = [-->
+	<!--[17, 16, 1, 0, 7, 4, 2, 1, 21, 18, 1, 0, 7, 4, 2, 0, 7, 4, 2, 0 ],-->
+	<!--[19, 18, 1, 0, 7, 7, 4, 1, 19, 18, 1, 0, 7, 4, 2, 0, 7, 4, 2, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 6, 1, 0, 18, 11, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 8, 8, 0, 0, 8, 8, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 18, 11, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 20, 12, 8, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 7, 10, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 7, 10, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ],-->
+	<!--[17, 10, 7, 0, 5, 5, 0, 0, 17, 10, 7, 0, 5, 5, 0, 0, 5, 5, 0, 0 ]-->
+	<!--];	-->
+        data.tabledata = [
+	[18, 17, 1, 0, 7, 5, 2, 0,   ,   ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[19, 18, 1, 0, 7, 5, 2, 0,   ,   ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 10, 7, 0, 5, 5, 0, 0,   ,   ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 9, 8, 0, 5, 5, 0, 0,   ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 10, 7, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 8, 9, 0, 5, 5, 0, 0,   ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 9, 8, 0, 5, 5, 0, 0,   ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 12, 5, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 11, 6, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 14, 3, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 14, 3, 0, 5, 3, 2, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 13, 4, 0, 5, 4, 1, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 13, 4, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 14, 3, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 13, 4, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 14, 4, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 12, 5, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 12, 5, 0, 5, 3, 2, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 11, 6, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 13, 4, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 11, 6, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 12, 5, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+	[17, 13, 4, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+    [17, 13, 4, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+    [17, 14, 3, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+    [17, 14, 3, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+    [17, 11, 6, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+    [17, 11, 6, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+    [17, 10, 7, 0, 5, 5, 0, 0,  ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+    [17, 8, 6, 0, 5, 0, 5, 0,   ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+    [17, 7, 7, 0, 5,  ,  ,  ,   ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+    [17, 3, 14, 0, 5, ,  ,  ,   ,    ,  ,  ,  ,  ,  ,  ,  ,  ,  ,  , ],
+
 	];
 	
 	var getPercent = function(totalIndex, passIndex) {
