--- a/assets/templates/sys_train_head_progress.html
+++ b/assets/templates/sys_train_head_progress.html
@@ -11,9 +11,11 @@
 	<!--div style="text-align: center;font-weight: bold; font-size:60px;"><%=data.data.currentActual%></div-->
 	<div style="text-align: center;">
 	<div style="max-width: 300px; max-height: 300px; margin-left: auto; margin-right: auto; margin-bottom: 25px;" id="chart_<%=data.id%>_progress"></div>
-	<h4 class="color-beige" style="padding-left: 15px">Actual train completion: <span style="color: #9EDD2E">6.90%</span></h4>
+	<!--<h4 class="color-beige" style="padding-left: 15px">Actual train completion: <span style="color: #9EDD2E">6.90%</span></h4>-->
+	<h4 class="color-beige total_progress" style="padding-left: 15px">Total Progress: <span style="color: #9EDD2E"><%=data.data.currentActual%></span></h4>
 	<div id="train_progress_container" style="margin-bottom: 25px;">
 	</div>
+    <h4 class="color-beige" style="padding-left: 15px">Actual train completion: <span style="color: #9EDD2E">6.90%</span></h4>
 	<!--<h1 style="padding-left: 15px"><%=data.data.currentActual%></h1>-->
 	</div>
 	
