Signed-off-by: sebint <sebin@hummingsoft.com.my>

--- a/assets/templates/sys_train_manufacturing_phase.html
+++ b/assets/templates/sys_train_manufacturing_phase.html
@@ -95,16 +95,7 @@
 <script type="text/javascript">
     //Added By Sebin
     $(function(){
-        $('.wb-pop').webuiPopover(
-
-                {
-                    trigger: 'hover',
-                    title:'Varience',
-                    placement:'top',
-                    animation:'pop'
-                }
-
-        );
+        $('.wb-pop').webuiPopover({trigger: 'hover',title: 'Varience',placement: 'top',animation: 'pop'});
     });
 
 </script>
