Signed-off-by: agailevictor <agailevictor@gmail.com>

--- a/assets/templates/sys_train_head_progress.html
+++ b/assets/templates/sys_train_head_progress.html
@@ -16,6 +16,7 @@
 	<div id="train_progress_container" style="margin-bottom: 25px;">
 	</div>
     <h4 class="color-beige" style="padding-left: 15px">Actual train completion: <span style="color: #9EDD2E">6.90%</span></h4>
+	<h4 class="color-beige">Number of Fully Completed Train: <a class="manufacturing-link link" href="#modal_phase" data-toggle="modal" style="font-weight:bold">04</a></h4>
 	<!--<h1 style="padding-left: 15px"><%=data.data.currentActual%></h1>-->
 	</div>
 	
