--- a/assets/templates/sys_train_manufacturing_phase.html
+++ b/assets/templates/sys_train_manufacturing_phase.html
@@ -2,9 +2,11 @@
 <div class="header bg-dot30 excel-normal">
     <!--img src="/mpxd/assets/img/icons/line_chart-26.png" style="float: left;margin-right: 13px;"-->
 	<% if (typeof(data.data[0].date) !== "undefined") { %>
-		<h2><%=data.title%></h2> <h2 class="asof">(As of <%=data.data[0].date%>)</h2>
+		<!--<h2><%=data.title%></h2> <h2 class="asof">(As of <%=data.data[0].date%>)</h2>-->
+		<h2>Project Timeline</h2> <h2 class="asof">(As of <%=data.data[0].date%>)</h2>
 	<% } else {%>
-		<h2><%=data.title%></h2>
+		<!--<h2><%=data.title%></h2>-->
+		<h2>Project Timeline</h2>
 	<% } %>
     <i class="header-icon fa fa-check-square-o"></i>
 </div>
