--- a/assets/templates/sys_train_manufacturing_progress_table.html
+++ b/assets/templates/sys_train_manufacturing_progress_table.html
@@ -140,7 +140,17 @@
                     <tr>
                     <td>Train No:</td>
                     <td>
-                    <input type="text" placeholder="Train Number" id="mpxd_train_no" maxlength="10" style="border-color: rgba(21, 166, 233, 0.2); " class="form-control">
+                    <!--<input type="text" placeholder="Train Number" id="mpxd_train_no" maxlength="10" style="border-color: rgba(21, 166, 233, 0.2); " class="form-control">-->
+                        <select class="form-control" id="mpxd_train_no" placeholder="Train Number">
+                            <option value="" selected disabled hidden="hidden">Train Number</option>
+                            <%
+                            for(var i=1;i<=58;i++){
+                            %>
+                            <option value="Train <%=i%>">Train <%=i%></option>
+                            <%
+                            }
+                            %>
+                        </select>
                     </td>
                     </tr>
                     <tr>
@@ -165,12 +175,12 @@
             $('#cmntonTrain').click(function(){
                 var $f,$m=0;
                 var $err="<small class='pull-left' style='color:rgb(194, 67, 71)'>*Required</small>";
-                    if($('#mpxd_train_no').val()!='') {
+                    if($('#mpxd_train_no').val()!=null) {
                         $('#mpxd_train_no').css("border-color", "rgba(21, 166, 233, 0.2)");$('#mpxd_train_no').next('small').remove();$f=1;
                     }else{
                         $('#mpxd_train_no').css("border-color","rgb(194, 67, 71)");$('#mpxd_train_no').next('small').remove();$('#mpxd_train_no').after($err);$f=0;
                     }
-                    if($('#mpxd_train_no_comment').val()!='') {
+                    if($('#mpxd_train_no_comment').val()!=null) {
                         $('#mpxd_train_no_comment').css("border-color", "rgba(21, 166, 233, 0.2)");$('#mpxd_train_no_comment').next('small').remove();$m=1;
                     }else{
                         $('#mpxd_train_no_comment').css("border-color","rgb(194, 67, 71)");$('#mpxd_train_no_comment').next('small').remove();$('#mpxd_train_no_comment').after($err);$m=0;
@@ -180,12 +190,24 @@
                             if (result == 1) {
                                 $("#modal_comment").modal('hide');
                                 $row = "<tr><td>" + $('#mpxd_train_no').val() + "</td><td>" + $('#mpxd_train_no_comment').val() + "</td></tr>";
-                                $n_tab="<table class=\"table table-bordered table-condensed table-hover\"><thead><tr><td>Train Num.</td><td>Comments</td></tr></thead><tbody><tr><td>"+$('#mpxd_train_no').val()+"</td><td>"+$('#mpxd_train_no_comment').val()+"</td></tr></tbody></table>";
+                                $n_tab="<table id=\"dataTab\" class=\"table table-condensed table-hover\"><thead><tr><td>Train Num.</td><td>Comments</td></tr></thead><tbody><tr><td>"+$('#mpxd_train_no').val()+"</td><td>"+$('#mpxd_train_no_comment').val()+"</td></tr></tbody></table>";
+//                                if($(".comment-container").children('#dataTab_wrapper').children('.table').length){
+//                                    $(".comment-container").children('#dataTab_wrapper').children('.table').children('tbody').prepend($row);
                                 if($(".comment-container").children('.table').length){
                                     $(".comment-container").children('.table').children('tbody').prepend($row);
                                 }else{
                                     $(".comment-container").append($n_tab);
+//                                    $("#dataTab").DataTable({
+//                                        pagingType: "simple",
+//                                        language: {
+//                                            paginate: {'next': 'Next &rarr;', 'previous': '&larr; Prev'}
+//                                        },
+//                                        bFilter: false,
+//                                        pageLength: 5
+//
+//                                    });
                                 }
+
 //                                $('#modal_default_3').animate({
 //                                    scrollTop: $(".comment-container").offset().top
 //                                }, 2000);
@@ -195,7 +217,9 @@
                             }
                         });
                     }
+
             });
+//           s
         });
 	</script>
 
