--- a/assets/templates/sys_train_manufacturing_testing.html
+++ b/assets/templates/sys_train_manufacturing_testing.html
@@ -12,10 +12,11 @@
 <!--Date: 09/05/2016-->
 <script type ="text/javascript">
 var twist = $('#data_date_selected').val();
+var c_data_date="?date="+moment($("#et_data_date").val(), "DD-MMM-YY").format("YYYY-MM-DD");
     tabledata=[];
     var temp=[];
     cap =[];
-    mpxd.getJSONData("GetTestingData", function (result) {
+    mpxd.getJSONData("GetTestingData"+c_data_date+"", function (result) {
         for (var i in result){
             temp.push([(result[i]['TRAIN_NO']== null?'-':result[i]['TRAIN_NO']),(result[i]['Static_Total']== null?'-':parseInt(result[i]['Static_Total'])),(result[i]['Static_Pass']== null?'-':parseInt(result[i]['Static_Pass'])),(result[i]['Static_Incomplete']== null?'-':parseInt(result[i]['Static_Incomplete'])),(result[i]['Static_Fail']== null?'-':parseInt(result[i]['Static_Fail'])),(result[i]['Dynamic_Total']== null?'-':parseInt(result[i]['Dynamic_Total'])),(result[i]['Dynamic_Pass']== null?'-':parseInt(result[i]['Dynamic_Pass'])),(result[i]['Dynamic_Incomplete']== null?'-':parseInt(result[i]['Dynamic_Incomplete'])),(result[i]['Dynamic_Fail']== null?'-':parseInt(result[i]['Dynamic_Fail'])),(result[i]['SAT_Total']== null?'-':parseInt(result[i]['SAT_Total'])),(result[i]['SAT_Incomplete']== null?'-':parseInt(result[i]['SAT_Incomplete'])),(result[i]['SAT_Fail']== null?'-':parseInt(result[i]['SAT_Fail'])),(result[i]['IT_Incomplete']== null?'-':parseInt(result[i]['IT_Incomplete'])),(result[i]['IT_Total']== null?'-':parseInt(result[i]['IT_Total'])),(result[i]['SAT_Pass']== null?'-':parseInt(result[i]['SAT_Pass'])),(result[i]['IT_Fail']== null?'-':parseInt(result[i]['IT_Fail'])),(result[i]['SIT_Pass']== null?'-':parseInt(result[i]['SIT_Pass'])),(result[i]['SIT_Total']== null?'-':parseInt(result[i]['SIT_Total'])),(result[i]['SIT_Incomplete']== null?'-':parseInt(result[i]['SIT_Incomplete'])),(result[i]['SIT_Fail']== null?'-':parseInt(result[i]['SIT_Fail'])),(result[i]['IT_Pass']== null?'-':parseInt(result[i]['IT_Pass']))]);
         }
