Signed-off-by: sebint <sebin@hummingsoft.com.my>

--- a/assets/templates/sys_train_manufacturing_progress_table.html
+++ b/assets/templates/sys_train_manufacturing_progress_table.html
@@ -180,7 +180,7 @@
                     }else{
                         $('#mpxd_train_no').css("border-color","rgb(194, 67, 71)");$('#mpxd_train_no').next('small').remove();$('#mpxd_train_no').after($err);$f=0;
                     }
-                    if($('#mpxd_train_no_comment').val()!=null) {
+                    if($('#mpxd_train_no_comment').val()!='') {
                         $('#mpxd_train_no_comment').css("border-color", "rgba(21, 166, 233, 0.2)");$('#mpxd_train_no_comment').next('small').remove();$m=1;
                     }else{
                         $('#mpxd_train_no_comment').css("border-color","rgb(194, 67, 71)");$('#mpxd_train_no_comment').next('small').remove();$('#mpxd_train_no_comment').after($err);$m=0;
