--- a/assets/plugin/tablePagination/pagination.css
+++ b/assets/plugin/tablePagination/pagination.css
@@ -1,14 +1,31 @@
-.pagination-btn{
-	float: left;
-	color: #333;
-	font-size:14px;
-	line-height:24px;
-	font-weight: normal;
-	text-align: center;
-	border: 1px solid #AAA;
-	margin:2px;
-	min-width: 14px;
-	padding:  0 7px;
-	box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
-	
+.pagination {
+    font-size: 80%;
+}
+
+.pagination a {
+    text-decoration: none;
+    border: solid 1px #AAE;
+    color: #15B;
+}
+
+.pagination a, .pagination span {
+    display: block;
+    float: left;
+    padding: 0.3em 0.5em;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    min-width:1em;
+    text-align:center;
+}
+
+.pagination .current {
+    background: #26B;
+    color: #fff;
+    border: solid 1px #AAE;
+}
+
+.pagination .current.prev, .pagination .current.next{
+    color:#999;
+    border-color:#999;
+    background:#fff;
 }
