--- a/assets/templates/sys_train_manufacturing_phase.html
+++ b/assets/templates/sys_train_manufacturing_phase.html
@@ -62,36 +62,38 @@
 		
 	<%}}%>
 	</table>
-	
-	<div class="modal" id="modal_phase" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div class="modal-dialog" style="width:300px">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-				<h4 class="modal-title">Fully completed trains</h4>
-			</div>
-			<div class="modal-body clearfix">
-				<table class="table table-bordered table-condensed table-hover" style="">
-				<thead>
-				<tr>
-				<th style="text-align: center">Completed trains</th>
-				</tr>
-				</thead>
-				<tbody style="text-align: center">
-					<tr><td>Train 01</td></tr>
-					<tr><td>Train 02</td></tr>
-					<tr><td>Train 03</td></tr>
-					<tr><td>Train 04</td></tr>
-				</tbody>
-				</table>
-				
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default btn-clean" data-dismiss="modal">Close</button>
-			</div>
-		</div>
-	</div>
-</div>
+
+    <!--comment on 05/11/2016 added the model in sys_train_head_progress.html-->
+
+	<!--<div class="modal" id="modal_phase" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">-->
+	<!--<div class="modal-dialog" style="width:300px">-->
+		<!--<div class="modal-content">-->
+			<!--<div class="modal-header">-->
+				<!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>-->
+				<!--<h4 class="modal-title">Fully completed trains</h4>-->
+			<!--</div>-->
+			<!--<div class="modal-body clearfix">-->
+				<!--<table class="table table-bordered table-condensed table-hover" style=""  id="id_fullyTable">-->
+				<!--<thead>-->
+				<!--<tr>-->
+				<!--<th style="text-align: center">Completed trains</th>-->
+				<!--</tr>-->
+				<!--</thead>-->
+				<!--<tbody style="text-align: center">-->
+					<!--&lt;!&ndash;<tr><td>Train 01</td></tr>-->
+					<!--<tr><td>Train 02</td></tr>-->
+					<!--<tr><td>Train 03</td></tr>-->
+					<!--<tr><td>Train 04</td></tr>&ndash;&gt;-->
+				<!--</tbody>-->
+				<!--</table>-->
+				<!---->
+			<!--</div>-->
+			<!--<div class="modal-footer">-->
+				<!--<button type="button" class="btn btn-default btn-clean" data-dismiss="modal">Close</button>-->
+			<!--</div>-->
+		<!--</div>-->
+	<!--</div>-->
+<!--</div>-->
 </div>
 <script type="text/javascript">
     //Added By Sebin
