--- a/assets/templates/sys_train_head_progress.html
+++ b/assets/templates/sys_train_head_progress.html
@@ -15,7 +15,7 @@
 	<h4 class="color-beige total_progress" style="padding-left: 15px">Actual <span class="g_package"></span> Package Progress: <span style="color: #9EDD2E"><%=data.data.currentActual%></span></h4>
 	<div id="train_progress_container" style="margin-bottom: 25px;">
 	</div>
-    <h4 class="color-beige" style="padding-left: 15px">Actual train completion: <span style="color: #9EDD2E">6.90%</span></h4>
+    <h4 class="color-beige" style="padding-left: 15px">Actual train completion: <span id="id_actual"  style="color: #9EDD2E"></span></h4>
 	<h4 class="color-beige">Number of Fully Completed Train: <a id="id_fullyTrain" class="manufacturing-link link" href="#modal_phase" data-toggle="modal" style="font-weight:bold"></a></h4>
 	<!--<h1 style="padding-left: 15px"><%=data.data.currentActual%></h1>-->
 	</div>
