Signed-off-by: agailevictor <agailevictor@gmail.com>

--- a/assets/templates/sys_train_manufacturing_progress_table.html
+++ b/assets/templates/sys_train_manufacturing_progress_table.html
@@ -50,9 +50,10 @@
 				<div class="train-box-header">
 					<div class="header-container"><h2>Puzhen Manufacturing Progress</h2></div>
 					<div class="manufacturing-container">
-						<div class="train-container">
+						<!--<div class="train-container" style="height: 1000px; overflow: scroll;overflow-x: hidden;">-->
+						<div class="train-container summersoft_scroll">
 						</div>
-						<div class="table-container" style="max-width: 500px; text-align: center; margin: auto; padding:20px;">
+						<div class="table-container summersoft_container" style="max-width: 500px; text-align: center; margin: auto; padding:20px;">
 						</div>
 							<div style="margin: 20px 0 10px 10px;">
 								Legend
@@ -80,15 +81,15 @@
 				<div class="train-box-header">
 					<div class="header-container"><h2>SMH Rail Assembly Progress</h2></div>
 					<div class="assembly-container">
-						<div class="train-container">
+						<div class="train-container summersoft_scroll">
 						</div>
-						<div class="table-container" style="max-width: 500px; text-align: center; margin: auto;">
+						<div class="table-container summersoft_container" style="max-width: 500px; text-align: center; margin: auto;">
 						</div>
                         <!--Added by Sebin-->
                         <div style="max-width: 500px; margin: auto; padding:20px;">
                             <a class="assembly-link" href="#modal_comment" data-toggle="modal" style="font-weight:bold">Add comments <i class="loadpage fa fa-comments"></i></a>
                         </div>
-                        <div class="comment-container" style="max-width: 500px; text-align: center; margin: auto;">
+                        <div class="comment-container summersoft_container" style="max-width: 500px; text-align: center; margin: auto;">
                         </div>
                         <!---->
 					</div>
@@ -96,7 +97,7 @@
 				<div class="train-box-header">
 					<div class="header-container"><h2>SUBD Dynamic Testing & Commissioning Status</h2></div>
 					<div class="subd-container">
-						<div class="train-container">
+						<div class="train-container summersoft_scroll">
 						</div>
 						<div class="table-container" style="max-width: 500px; text-align: center; margin: auto; padding:20px;">
 						</div>
@@ -106,7 +107,7 @@
 				<div class="train-box-header">
 					<div class="header-container"><h2>KJD</h2></div>
 					<div class="kjd-container">
-						<div class="train-container">
+						<div class="train-container summersoft_scroll">
 						</div>
 						<div class="table-container" style="max-width: 500px; text-align: center; margin: auto; padding:20px;">
 						</div>
